--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,18 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto_1_POO
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
+file.reference.jxmaps-1.3.2-lib=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib
+file.reference.jxmaps-1.3.2.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib\\jxmaps-1.3.2.jar
+file.reference.jxmapsdemo.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\demo\\jxmapsdemo.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jdatepicker-1.3.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jxmaps-1.3.2-lib}:\
+    ${file.reference.jxmaps-1.3.2.jar}:\
+    ${file.reference.jxmapsdemo.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
