--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,16 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto_1_POO
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
+file.reference.jxbrowser-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
+file.reference.jxbrowser-javafx-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-javafx-7.19.jar
+file.reference.jxbrowser-linux64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-7.19.jar
+file.reference.jxbrowser-linux64-arm-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-arm-7.19.jar
+file.reference.jxbrowser-mac-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-mac-7.19.jar
+file.reference.jxbrowser-mac-arm-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-mac-arm-7.19.jar
+file.reference.jxbrowser-swing-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
+file.reference.jxbrowser-swt-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
+file.reference.jxbrowser-win32-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win32-7.19.jar
+file.reference.jxbrowser-win64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
 file.reference.jxmaps-1.3.2-lib=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib
 file.reference.jxmaps-1.3.2.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib\\jxmaps-1.3.2.jar
 file.reference.jxmapsdemo.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\demo\\jxmapsdemo.jar
@@ -46,7 +56,17 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jxmaps-1.3.2-lib}:\
     ${file.reference.jxmaps-1.3.2.jar}:\
-    ${file.reference.jxmapsdemo.jar}
+    ${file.reference.jxmapsdemo.jar}:\
+    ${file.reference.jxbrowser-7.19.jar}:\
+    ${file.reference.jxbrowser-javafx-7.19.jar}:\
+    ${file.reference.jxbrowser-linux64-7.19.jar}:\
+    ${file.reference.jxbrowser-linux64-arm-7.19.jar}:\
+    ${file.reference.jxbrowser-mac-7.19.jar}:\
+    ${file.reference.jxbrowser-mac-arm-7.19.jar}:\
+    ${file.reference.jxbrowser-swing-7.19.jar}:\
+    ${file.reference.jxbrowser-swt-7.19.jar}:\
+    ${file.reference.jxbrowser-win32-7.19.jar}:\
+    ${file.reference.jxbrowser-win64-7.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
