--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/Proyecto_1_POO
 excludes=
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
+file.reference.jsoup-1.14.3.jar=C:\\Users\\ytces\\Downloads\\jsoup-1.14.3.jar
 file.reference.jxbrowser-7.19.jar=C:\\Users\\ytces\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.jxbrowser-javafx-7.19.jar=C:\\Users\\ytces\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-javafx-7.19.jar
 file.reference.jxbrowser-linux64-7.19.jar=C:\\Users\\ytces\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-7.19.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${file.reference.jxbrowser-swing-7.19.jar}:\
     ${file.reference.jxbrowser-swt-7.19.jar}:\
     ${file.reference.jxbrowser-win32-7.19.jar}:\
-    ${file.reference.jxbrowser-win64-7.19.jar}
+    ${file.reference.jxbrowser-win64-7.19.jar}:\
+    ${file.reference.jsoup-1.14.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
