--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,34 +33,55 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proyecto_1_POO
 excludes=
+file.reference.commons-codec-1.10.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-codec-1.10.jar
 file.reference.commons-collections4-4.1.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-3=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-logging-1.2.jar
+file.reference.curvesapi-1.04.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
+file.reference.jdatepicker-1.3.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jdatepicker-1.3.4.jar
 file.reference.jsoup-1.14.3.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jsoup-1.14.3.jar
+file.reference.jsoup-1.14.3.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jsoup-1.14.3.jar
+file.reference.junit-4.12.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\junit-4.12.jar
 file.reference.jxbrowser-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
+file.reference.jxbrowser-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.jxbrowser-javafx-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-javafx-7.19.jar
 file.reference.jxbrowser-linux64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-7.19.jar
 file.reference.jxbrowser-linux64-arm-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-arm-7.19.jar
 file.reference.jxbrowser-mac-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-mac-7.19.jar
 file.reference.jxbrowser-mac-arm-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-mac-arm-7.19.jar
 file.reference.jxbrowser-swing-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
+file.reference.jxbrowser-swing-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
 file.reference.jxbrowser-swt-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
+file.reference.jxbrowser-swt-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
 file.reference.jxbrowser-win32-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win32-7.19.jar
 file.reference.jxbrowser-win64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
+file.reference.jxbrowser-win64-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
 file.reference.jxmaps-1.3.2-lib=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib
 file.reference.jxmaps-1.3.2.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib\\jxmaps-1.3.2.jar
 file.reference.jxmapsdemo.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\demo\\jxmapsdemo.jar
+file.reference.log4j-1.2.17.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\log4j-1.2.17.jar
 file.reference.poi-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\poi-3.17.jar
 file.reference.poi-3.17.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-3.17.jar
+file.reference.poi-3.17.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-3.17.jar
 file.reference.poi-examples-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-examples-3.17.jar
+file.reference.poi-examples-3.17.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-examples-3.17.jar
 file.reference.poi-excelant-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-excelant-3.17.jar
+file.reference.poi-excelant-3.17.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-excelant-3.17.jar
 file.reference.poi-ooxml-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-scratchpad-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-scratchpad-3.17.jar
+file.reference.poi-scratchpad-3.17.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-scratchpad-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\ooxml-lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-3.1.0-javadoc.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\xmlbeans-3.1.0-javadoc.jar
 includes=**
 jar.compress=false
@@ -94,7 +115,28 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.17.jar-1}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
     ${file.reference.poi-scratchpad-3.17.jar}:\
-    ${file.reference.jsoup-1.14.3.jar}
+    ${file.reference.jsoup-1.14.3.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.jsoup-1.14.3.jar-1}:\
+    ${file.reference.jxbrowser-7.19.jar-1}:\
+    ${file.reference.jxbrowser-swing-7.19.jar-1}:\
+    ${file.reference.jxbrowser-swt-7.19.jar-1}:\
+    ${file.reference.jxbrowser-win64-7.19.jar-1}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-3}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.poi-examples-3.17.jar-1}:\
+    ${file.reference.poi-excelant-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
+    ${file.reference.poi-scratchpad-3.17.jar-1}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
