--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,10 @@ file.reference.commons-collections4-4.1.jar-2=Z:\\TEC\\II semestre 2021\\POO\\pr
 file.reference.commons-collections4-4.1.jar-3=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\commons-collections4-4.1.jar
 file.reference.commons-logging-1.2.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-logging-1.2.jar
 file.reference.curvesapi-1.04.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
+file.reference.javax-inject.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax-inject.jar
+file.reference.javax.activation-1.1.0.v201105071233.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax.activation-1.1.0.v201105071233.jar
+file.reference.javax.ejb.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax.ejb.jar
+file.reference.javax.faces-api-2.0.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax.faces-api-2.0.jar
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jcalendar-1.4.jar
@@ -77,7 +81,7 @@ file.reference.jxmaps-1.3.2-lib=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos
 file.reference.jxmaps-1.3.2.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib\\jxmaps-1.3.2.jar
 file.reference.jxmapsdemo.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\demo\\jxmapsdemo.jar
 file.reference.log4j-1.2.17.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\log4j-1.2.17.jar
-file.reference.mail.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\mail.jar
+file.reference.mail.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\javamail1_4_7\\javamail-1.4.7\\mail.jar
 file.reference.poi-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\poi-3.17.jar
 file.reference.poi-3.17.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-3.17.jar
 file.reference.poi-3.17.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-3.17.jar
@@ -162,6 +166,10 @@ javac.classpath=\
     ${file.reference.jxbrowser-win32-7.19.jar-1}:\
     ${file.reference.jxbrowser-win64-7.19.jar-2}:\
     ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.javax-inject.jar}:\
+    ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
+    ${file.reference.javax.ejb.jar}:\
+    ${file.reference.javax.faces-api-2.0.jar}:\
     ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
