--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-collections4-4.1.jar-2=Z:\\TEC\\II semestre 2021\\POO\\pr
 file.reference.commons-collections4-4.1.jar-3=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\commons-collections4-4.1.jar
 file.reference.commons-logging-1.2.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-logging-1.2.jar
 file.reference.curvesapi-1.04.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\ooxml-lib\\curvesapi-1.04.jar
+file.reference.DateChooser.jar=C:\\Users\\muril\\Downloads\\DateChooser.jar
 file.reference.javax-inject.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax-inject.jar
 file.reference.javax.activation-1.1.0.v201105071233.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax.activation-1.1.0.v201105071233.jar
 file.reference.javax.ejb.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\LibreriasProyectoCorreo\\javax.ejb.jar
@@ -47,17 +48,22 @@ file.reference.javax.faces-api-2.0.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a 
 file.reference.jcalendar-1.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-3=C:\\Users\\muril\\Downloads\\jcalendar-1.4.jar
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
 file.reference.jdatepicker-1.3.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jdatepicker-1.3.4.jar
+file.reference.jdatepicker-1.3.4.jar-2=C:\\Users\\muril\\Downloads\\jdatepicker-1.3.4.jar
 file.reference.jsoup-1.14.3.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jsoup-1.14.3.jar
 file.reference.jsoup-1.14.3.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jsoup-1.14.3.jar
 file.reference.jsoup-1.14.3.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jsoup-1.14.3.jar
+file.reference.jsoup-1.14.3.jar-3=C:\\Users\\muril\\Downloads\\jsoup-1.14.3.jar
 file.reference.junit-4.12.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\junit-4.12.jar
 file.reference.jxbrowser-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.jxbrowser-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.jxbrowser-7.19.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-7.19.jar
+file.reference.jxbrowser-7.19.jar-3=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.jxbrowser-javafx-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-javafx-7.19.jar
 file.reference.jxbrowser-javafx-7.19.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-javafx-7.19.jar
+file.reference.jxbrowser-javafx-7.19.jar-2=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-javafx-7.19.jar
 file.reference.jxbrowser-linux64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-7.19.jar
 file.reference.jxbrowser-linux64-7.19.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-linux64-7.19.jar
 file.reference.jxbrowser-linux64-arm-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-arm-7.19.jar
@@ -69,19 +75,24 @@ file.reference.jxbrowser-mac-arm-7.19.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orienta
 file.reference.jxbrowser-swing-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
 file.reference.jxbrowser-swing-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
 file.reference.jxbrowser-swing-7.19.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-swing-7.19.jar
+file.reference.jxbrowser-swing-7.19.jar-3=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swing-7.19.jar
 file.reference.jxbrowser-swt-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
 file.reference.jxbrowser-swt-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
 file.reference.jxbrowser-swt-7.19.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-swt-7.19.jar
+file.reference.jxbrowser-swt-7.19.jar-3=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-swt-7.19.jar
 file.reference.jxbrowser-win32-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win32-7.19.jar
 file.reference.jxbrowser-win32-7.19.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-win32-7.19.jar
+file.reference.jxbrowser-win32-7.19.jar-2=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win32-7.19.jar
 file.reference.jxbrowser-win64-7.19.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
 file.reference.jxbrowser-win64-7.19.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
 file.reference.jxbrowser-win64-7.19.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jxbrowser-win64-7.19.jar
+file.reference.jxbrowser-win64-7.19.jar-3=C:\\Users\\muril\\Downloads\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-win64-7.19.jar
 file.reference.jxmaps-1.3.2-lib=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib
 file.reference.jxmaps-1.3.2.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\lib\\jxmaps-1.3.2.jar
 file.reference.jxmapsdemo.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxmaps-1.3.2\\demo\\jxmapsdemo.jar
 file.reference.log4j-1.2.17.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\log4j-1.2.17.jar
 file.reference.mail.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\javamail1_4_7\\javamail-1.4.7\\mail.jar
+file.reference.mail.jar-1=C:\\Users\\muril\\Downloads\\mail.jar
 file.reference.poi-3.17.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\poi-3.17.jar
 file.reference.poi-3.17.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-3.17.jar
 file.reference.poi-3.17.jar-2=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-3.17.jar
@@ -170,7 +181,19 @@ javac.classpath=\
     ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
     ${file.reference.javax.ejb.jar}:\
     ${file.reference.javax.faces-api-2.0.jar}:\
-    ${file.reference.mail.jar}
+    ${file.reference.mail.jar}:\
+    ${libs.POI2.classpath}:\
+    ${file.reference.jxbrowser-7.19.jar-3}:\
+    ${file.reference.jxbrowser-javafx-7.19.jar-2}:\
+    ${file.reference.jxbrowser-swing-7.19.jar-3}:\
+    ${file.reference.jxbrowser-swt-7.19.jar-3}:\
+    ${file.reference.jxbrowser-win32-7.19.jar-2}:\
+    ${file.reference.jxbrowser-win64-7.19.jar-3}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.jdatepicker-1.3.4.jar-2}:\
+    ${file.reference.jsoup-1.14.3.jar-3}:\
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
