--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,7 @@ file.reference.commons-codec-1.10.jar=Z\:\\TEC\\II semestre 2021\\POO\\proyecto1
 file.reference.commons-collections4-4.1.jar-2=Z\:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\commons-collections4-4.1.jar
 file.reference.jcommon-1.0.23.jar=C:\\Users\\ytces\\Downloads\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.5.3.jar=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jfreechart-1.5.3\\target\\jfreechart-1.5.3.jar
+file.reference.jfreechart-1.5.3.jar-1=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jfreechart-1.5.3.jar
 javadoc.splitindex=true
 file.reference.commons-collections4-4.1.jar-1=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\commons-collections4-4.1.jar
 file.reference.jdatepicker-1.3.4.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
@@ -151,7 +152,8 @@ javac.classpath=\
     ${file.reference.mail.jar}:\
     ${file.reference.mail.jar-1}:\
     ${file.reference.jfreechart-1.5.3.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.jfreechart-1.5.3.jar-1}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 file.reference.xmlbeans-2.6.0.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\xmlbeans-2.6.0.jar
