--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,6 +52,7 @@ file.reference.jcalendar-1.4.jar-3=C:\\Users\\muril\\Downloads\\jcalendar-1.4.ja
 file.reference.jdatepicker-1.3.4.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jdatepicker-1.3.4.jar
 file.reference.jdatepicker-1.3.4.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jdatepicker-1.3.4.jar
 file.reference.jdatepicker-1.3.4.jar-2=C:\\Users\\muril\\Downloads\\jdatepicker-1.3.4.jar
+file.reference.jfreechart-1.5.3.jar=C:\\Users\\muril\\Downloads\\jfreechart-1.5.3.jar
 file.reference.jsoup-1.14.3.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jar_files\\jsoup-1.14.3.jar
 file.reference.jsoup-1.14.3.jar-1=Z:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\jsoup-1.14.3.jar
 file.reference.jsoup-1.14.3.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jsoup-1.14.3.jar
@@ -193,7 +194,8 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.jar-3}:\
     ${file.reference.jdatepicker-1.3.4.jar-2}:\
     ${file.reference.jsoup-1.14.3.jar-3}:\
-    ${file.reference.mail.jar-1}
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.jfreechart-1.5.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
