--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,6 @@
+file.reference.activation.jar=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\mailactivation\\activation.jar
+file.reference.jfreechart-1.5.3.jar-2=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\jfreechart-1.5.3.jar
+file.reference.mail.jar-3=D:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\Librer\u00edas JAR\\mailactivation\\mail.jar
 #Fri Oct 08 19:51:28 CST 2021
 file.reference.poi-excelant-3.17.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\GITHUB\\Proyecto-1-POO-fernanda\\poi-3.17\\poi-3.17\\poi-excelant-3.17.jar
 file.reference.poi-excelant-3.17.jar-1=Z\:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\poi-excelant-3.17.jar
@@ -146,7 +149,93 @@ javadoc.notree=false
 file.reference.jxbrowser-linux64-arm-7.19.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-linux64-arm-7.19.jar
 file.reference.jxbrowser-7.19.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\PROYECTO JAVA\\jxbrowser-7.19-cross-desktop-win_mac_linux\\lib\\jxbrowser-7.19.jar
 file.reference.junit-4.12.jar=Z\:\\TEC\\II semestre 2021\\POO\\proyecto1\\librerias\\poi-3.17\\lib\\junit-4.12.jar
-javac.classpath=${libs.absolutelayout.classpath}\:${file.reference.jdatepicker-1.3.4.jar}\:${file.reference.jcalendar-1.4.jar}\:${file.reference.jxmaps-1.3.2-lib}\:${file.reference.jxmaps-1.3.2.jar}\:${file.reference.jxmapsdemo.jar}\:${file.reference.jxbrowser-7.19.jar}\:${file.reference.jxbrowser-javafx-7.19.jar}\:${file.reference.jxbrowser-linux64-7.19.jar}\:${file.reference.jxbrowser-linux64-arm-7.19.jar}\:${file.reference.jxbrowser-mac-7.19.jar}\:${file.reference.jxbrowser-mac-arm-7.19.jar}\:${file.reference.jxbrowser-swing-7.19.jar}\:${file.reference.jxbrowser-swt-7.19.jar}\:${file.reference.jxbrowser-win32-7.19.jar}\:${file.reference.jxbrowser-win64-7.19.jar}\:${file.reference.commons-collections4-4.1.jar}\:${file.reference.poi-3.17.jar}\:${file.reference.poi-ooxml-3.17.jar}\:${file.reference.poi-ooxml-schemas-3.17.jar}\:${file.reference.xmlbeans-2.6.0.jar}\:${file.reference.xmlbeans-3.1.0-javadoc.jar}\:${file.reference.commons-collections4-4.1.jar-1}\:${file.reference.poi-3.17.jar-1}\:${file.reference.poi-examples-3.17.jar}\:${file.reference.poi-excelant-3.17.jar}\:${file.reference.poi-ooxml-3.17.jar-1}\:${file.reference.poi-ooxml-schemas-3.17.jar-1}\:${file.reference.poi-scratchpad-3.17.jar}\:${file.reference.jsoup-1.14.3.jar}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.jdatepicker-1.3.4.jar-1}\:${file.reference.jsoup-1.14.3.jar-1}\:${file.reference.jxbrowser-7.19.jar-1}\:${file.reference.jxbrowser-swing-7.19.jar-1}\:${file.reference.jxbrowser-swt-7.19.jar-1}\:${file.reference.jxbrowser-win64-7.19.jar-1}\:${file.reference.commons-codec-1.10.jar}\:${file.reference.commons-collections4-4.1.jar-2}\:${file.reference.commons-logging-1.2.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.log4j-1.2.17.jar}\:${file.reference.commons-collections4-4.1.jar-3}\:${file.reference.poi-3.17.jar-2}\:${file.reference.poi-examples-3.17.jar-1}\:${file.reference.poi-excelant-3.17.jar-1}\:${file.reference.poi-ooxml-3.17.jar-2}\:${file.reference.poi-ooxml-schemas-3.17.jar-2}\:${file.reference.poi-scratchpad-3.17.jar-1}\:${file.reference.curvesapi-1.04.jar}\:${file.reference.xmlbeans-2.6.0.jar-1}\:${file.reference.jsoup-1.14.3.jar-2}\:${file.reference.jxbrowser-7.19.jar-2}\:${file.reference.jxbrowser-javafx-7.19.jar-1}\:${file.reference.jxbrowser-linux64-7.19.jar-1}\:${file.reference.jxbrowser-linux64-arm-7.19.jar-1}\:${file.reference.jxbrowser-mac-7.19.jar-1}\:${file.reference.jxbrowser-mac-arm-7.19.jar-1}\:${file.reference.jxbrowser-swing-7.19.jar-2}\:${file.reference.jxbrowser-swt-7.19.jar-2}\:${file.reference.jxbrowser-win32-7.19.jar-1}\:${file.reference.jxbrowser-win64-7.19.jar-2}\:${file.reference.jcalendar-1.4.jar-2}\:${file.reference.javax-inject.jar}\:${file.reference.javax.activation-1.1.0.v201105071233.jar}\:${file.reference.javax.ejb.jar}\:${file.reference.javax.faces-api-2.0.jar}\:${file.reference.mail.jar}\:${libs.POI2.classpath}\:${file.reference.jxbrowser-7.19.jar-3}\:${file.reference.jxbrowser-javafx-7.19.jar-2}\:${file.reference.jxbrowser-swing-7.19.jar-3}\:${file.reference.jxbrowser-swt-7.19.jar-3}\:${file.reference.jxbrowser-win32-7.19.jar-2}\:${file.reference.jxbrowser-win64-7.19.jar-3}\:${file.reference.DateChooser.jar}\:${file.reference.jcalendar-1.4.jar-3}\:${file.reference.jdatepicker-1.3.4.jar-2}\:${file.reference.jsoup-1.14.3.jar-3}\:${file.reference.mail.jar-1}\:${file.reference.jfreechart-1.5.3.jar}\:${file.reference.mail.jar-2}\:${file.reference.jfreechart-1.5.3.jar-1}
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jdatepicker-1.3.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jxmaps-1.3.2-lib}:\
+    ${file.reference.jxmaps-1.3.2.jar}:\
+    ${file.reference.jxmapsdemo.jar}:\
+    ${file.reference.jxbrowser-7.19.jar}:\
+    ${file.reference.jxbrowser-javafx-7.19.jar}:\
+    ${file.reference.jxbrowser-linux64-7.19.jar}:\
+    ${file.reference.jxbrowser-linux64-arm-7.19.jar}:\
+    ${file.reference.jxbrowser-mac-7.19.jar}:\
+    ${file.reference.jxbrowser-mac-arm-7.19.jar}:\
+    ${file.reference.jxbrowser-swing-7.19.jar}:\
+    ${file.reference.jxbrowser-swt-7.19.jar}:\
+    ${file.reference.jxbrowser-win32-7.19.jar}:\
+    ${file.reference.jxbrowser-win64-7.19.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.xmlbeans-3.1.0-javadoc.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.jsoup-1.14.3.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jdatepicker-1.3.4.jar-1}:\
+    ${file.reference.jsoup-1.14.3.jar-1}:\
+    ${file.reference.jxbrowser-7.19.jar-1}:\
+    ${file.reference.jxbrowser-swing-7.19.jar-1}:\
+    ${file.reference.jxbrowser-swt-7.19.jar-1}:\
+    ${file.reference.jxbrowser-win64-7.19.jar-1}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-2}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-3}:\
+    ${file.reference.poi-3.17.jar-2}:\
+    ${file.reference.poi-examples-3.17.jar-1}:\
+    ${file.reference.poi-excelant-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-3.17.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
+    ${file.reference.poi-scratchpad-3.17.jar-1}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.jsoup-1.14.3.jar-2}:\
+    ${file.reference.jxbrowser-7.19.jar-2}:\
+    ${file.reference.jxbrowser-javafx-7.19.jar-1}:\
+    ${file.reference.jxbrowser-linux64-7.19.jar-1}:\
+    ${file.reference.jxbrowser-linux64-arm-7.19.jar-1}:\
+    ${file.reference.jxbrowser-mac-7.19.jar-1}:\
+    ${file.reference.jxbrowser-mac-arm-7.19.jar-1}:\
+    ${file.reference.jxbrowser-swing-7.19.jar-2}:\
+    ${file.reference.jxbrowser-swt-7.19.jar-2}:\
+    ${file.reference.jxbrowser-win32-7.19.jar-1}:\
+    ${file.reference.jxbrowser-win64-7.19.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-2}:\
+    ${file.reference.javax-inject.jar}:\
+    ${file.reference.javax.activation-1.1.0.v201105071233.jar}:\
+    ${file.reference.javax.ejb.jar}:\
+    ${file.reference.javax.faces-api-2.0.jar}:\
+    ${file.reference.mail.jar}:\
+    ${libs.POI2.classpath}:\
+    ${file.reference.jxbrowser-7.19.jar-3}:\
+    ${file.reference.jxbrowser-javafx-7.19.jar-2}:\
+    ${file.reference.jxbrowser-swing-7.19.jar-3}:\
+    ${file.reference.jxbrowser-swt-7.19.jar-3}:\
+    ${file.reference.jxbrowser-win32-7.19.jar-2}:\
+    ${file.reference.jxbrowser-win64-7.19.jar-3}:\
+    ${file.reference.DateChooser.jar}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.jdatepicker-1.3.4.jar-2}:\
+    ${file.reference.jsoup-1.14.3.jar-3}:\
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.jfreechart-1.5.3.jar}:\
+    ${file.reference.mail.jar-2}:\
+    ${file.reference.jfreechart-1.5.3.jar-1}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar-3}:\
+    ${file.reference.jfreechart-1.5.3.jar-2}
 javadoc.additionalparam=
 file.reference.xmlbeans-3.1.0-javadoc.jar=D\:\\TEC\\II SEMESTRE\\Progra Orientada a Objetos\\TAREAS PROGRAMADAS\\TAREA 1\\Jar files\\xmlbeans-3.1.0-javadoc.jar
 build.classes.dir=${build.dir}/classes
